Bug 117075 - FILEOPEN: ODT: TOC numberings have incorrect right indent
Summary: FILEOPEN: ODT: TOC numberings have incorrect right indent
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-17 23:27 UTC by Xisco Faulí
Modified: 2018-04-20 09:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (175.99 KB, application/vnd.oasis.opendocument.text)
2018-04-17 23:27 UTC, Xisco Faulí
Details
Compasion before and after (259.04 KB, image/png)
2018-04-17 23:28 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-04-17 23:27:03 UTC
Created attachment 141436 [details]
sample document

Steps to reproduce:
1. Open attached document
2. Go to page 3 and check the numberings' indent

-> It should be aligned to the right. See attached image
Comment 1 Xisco Faulí 2018-04-17 23:28:00 UTC
Created attachment 141437 [details]
Compasion before and after
Comment 2 Xisco Faulí 2018-04-17 23:29:24 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-28 10:00:30 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-28 13:01:25 +0200
commit 867a22fd199e732803c9050fe9f84ad630ec27fb (patch)
tree 4a33f2084c10a5d96def0039c9374073106bbe5b
parent 149a4d756699f4275f9f84807e72526e73aed1b2 (diff)
loplugin:virtualdown in xmloff/xmlsecurity

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin

[Bug found by office-interoperability-tools]
Comment 3 m_a_riosv 2018-04-18 08:41:26 UTC
Updating the index gets it right I think.
Comment 4 Commit Notification 2018-04-19 11:13:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ec8afafea320f40806abc7bdc9149a9b26b3d4c

tdf#117075 TOC numberings have incorrect right indent

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-04-20 09:12:35 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: ffa6c70deb054c0dff4aab5a6ba5a03d0225d32d
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Noel, thanks for fixing this!!