tdf#117075 TOC numberings have incorrect right indent

This reverts parts of
    commit 867a22fd199e732803c9050fe9f84ad630ec27fb
    Date:   Wed Mar 28 10:00:30 2018 +0200
    loplugin:virtualdown in xmloff/xmlsecurity
and
    commit 73e6a7975b3508c5cfccb3df7c35b0303f87d9bb
    Date:   Thu Mar 29 09:35:22 2018 +0200
    loplugin:unusedmethods

Change-Id: Id4230fafc10bbfe5822f7011a1b1d3d9dff30735
Reviewed-on: https://gerrit.libreoffice.org/53149
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>