xmloff/source/transform/FlatTContext.cxx
@@ -49,4 +49,9 @@ void XMLPersTextContentTContext::Characters( const OUString& rChars )
     m_aCharacters += rChars;
 }
 
+void XMLPersTextContentTContext::ExportContent()
+{
+    GetTransformer().GetDocHandler()->characters( m_aCharacters );
+}
+
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
