xmloff/source/transform/TransformerContext.cxx
@@ -85,4 +85,9 @@ void XMLTransformerContext::Export()
     OSL_ENSURE( false, "context is not persistent" );
 }
 
+void XMLTransformerContext::ExportContent()
+{
+    OSL_ENSURE( false, "context is not persistent" );
+}
+
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
